# sdk-nrf

./: .gitignore  CODEOWNERS  west.yml
applications/asset_tracker/: CMakeLists.txt  Kconfig  prj.conf  prj_nrf9160_pca20035ns.conf  prj_thingy91_nrf9160ns.conf  spm.conf
applications/asset_tracker/child_image/spm/: prj.conf
applications/asset_tracker/src/: certificates.h  main.c
applications/asset_tracker/src/battery_monitor/: battery_monitor.c
applications/asset_tracker/src/cloud_codec/: cloud_codec.c  cloud_codec.h
applications/asset_tracker/src/env_sensors/: bsec.c  env_sensor_api.h  env_sensors.c
applications/asset_tracker/src/gps_controller/: Kconfig  gps_controller.c  gps_controller.h
applications/asset_tracker/src/ui/: led_pwm.c
applications/asset_tracker/src/ui/include/: ui.h
applications/asset_tracker_env_mgr/: CMakeLists.txt
applications/asset_tracker_env_mgr/configuration/nrf9160_pca10090ns/: app_ZDebug.conf  app_ZRelease.conf  buttons_def.h  click_detector_def.h  dts.overlay  led_state_def.h
applications/asset_tracker_env_mgr/configuration/nrf9160_pca20035ns/: app_ZDebug.conf  app_ZRelease.conf
applications/asset_tracker_env_mgr/src/: main.c
applications/asset_tracker_env_mgr/src/cloud_codec/: cloud_codec.c  cloud_codec.h
applications/asset_tracker_env_mgr/src/events/: CMakeLists.txt  Kconfig  config_event.h
applications/asset_tracker_env_mgr/src/hw_interface/: CMakeLists.txt  Kconfig  buttons.c
applications/asset_tracker_env_mgr/src/modules/: CMakeLists.txt  Kconfig  Kconfig.demo_module  Kconfig.lte_module  demo_module.c  lte_module.c  power_manager.c
applications/asset_tracker_v2/: CMakeLists.txt  README.rst  prj.conf
applications/asset_tracker_v2/src/cloud/: CMakeLists.txt  my_integration.c  nrf_cloud_integration.c
applications/asset_tracker_v2/src/cloud/cloud_codec/: CMakeLists.txt  cloud_codec.h  nrf_cloud_codec.c
applications/asset_tracker_v2/src/cloud/mqtt_backend/: CMakeLists.txt  Kconfig  mqtt_backend.c  mqtt_backend.h
applications/asset_tracker_v2/src/modules/: Kconfig.cloud_module  cloud_module.c  gps_module.c
applications/cat_tracker/: prj.conf
applications/cat_tracker/src/: main.c
applications/cat_tracker/src/leds/: leds.c
applications/connectivity_bridge/: prj.conf
applications/connectivity_bridge/boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay
applications/connectivity_bridge/src/: main.c
applications/connectivity_bridge/src/modules/: power_handler.c
applications/event_mngr_iot/blinky/: CMakeLists.txt  Kconfig
applications/event_mngr_iot/blinky/configuration/: app.conf  led_state.h
applications/event_mngr_iot/cloud_and_gps/: CMakeLists.txt  Kconfig
applications/event_mngr_iot/cloud_and_gps/configuration/: ZDebug.conf  ZRelease.conf  app.conf  led_state.h
applications/event_mngr_iot/cloud_and_gps/configuration/nrf9160_pca10090ns/: led_state_def.h  port_state_def.h
applications/event_mngr_iot/cloud_and_gps/configuration/nrf9160_pca20035ns/: board.conf  click_detector_def.h  led_state_def.h
applications/event_mngr_iot/cloud_and_gps/configuration/nrf9160dk_nrf9160ns/: led_state_def.h
applications/event_mngr_iot/cloud_and_gps/configuration/thingy91_nrf9160ns/: buttons_def.h  leds_def.h
applications/event_mngr_iot/cloud_and_gps/src/: main.c
applications/event_mngr_iot/cloud_and_gps/src/modules/: Kconfig.app_module  app_module.c
applications/event_mngr_iot/cloud_client/: CMakeLists.txt  Kconfig
applications/event_mngr_iot/cloud_client/configuration/: ZDebug.conf  ZRelease.conf  app.conf  (+1 more)
applications/event_mngr_iot/nrf_cloud_agps/: CMakeLists.txt
applications/event_mngr_iot/nrf_cloud_agps/configuration/: app.conf
applications/event_mngr_iot/nrf_cloud_agps/configuration/nrf9160_pca10090ns/: board.conf
applications/event_mngr_iot/nrf_cloud_agps/src/modules/: app_module.c
applications/nrf_desktop/: CMakeLists.txt
applications/usb_uart_bridge/src/: main.c
boards/arm/nrf51_desktop/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf51_desktop.dts  nrf51_desktop.yaml  nrf51_desktop_defconfig
boards/arm/nrf52840_pca20035/: Kconfig.defconfig  nrf52840_pca20035.dts
boards/arm/nrf52_pca20037/: Kconfig  nrf52_pca20037.dts  nrf52_pca20037_defconfig
boards/arm/nrf9160_pca20035/: nrf9160_pca20035_common.dts
boards/arm/thingy91v2v1_nrf9160/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  thingy91v2v1_nrf9160.dts  thingy91v2v1_nrf9160.yaml  thingy91v2v1_nrf9160_common.dts  thingy91v2v1_nrf9160_defconfig  thingy91v2v1_nrf9160_ns.dts  thingy91v2v1_nrf9160_ns.yaml  thingy91v2v1_nrf9160_ns_defconfig
doc/nrf/: links.txt
doc/nrf/modules/: mod_memfault.rst
doc/nrf/releases/: release-notes-latest.rst
drivers/adp536x/: adp536x.c
drivers/gps/nrf9160_gps/: nrf9160_gps.c
drivers/lte_link_control/: lte_lc.c
drivers/nrf9160_gps/: nrf9160_gps.c
drivers/sensor/: CMakeLists.txt
drivers/sensor/paw3212/: Kconfig  paw3212.c
ext/cjson/: cJSON.c  cJSON.h
include/: gps.h  lte_lc.h  modem_info.h
include/drivers/: adp536x.h
include/modem/: lte_lc.h
include/net/: cloud.h  cloud_backend.h  nrf_cloud_agps.h  nrf_cloud_pgps.h  nrf_cloud_pgps.rst
lib/at_host/: at_host.c
lib/bsdlib/: nrf91_sockets.c
lib/lte_link_control/: lte_lc.c
lib/modem_info/: modem_info.c
modules/memfault/: Kconfig  memfault_flash_coredump_storage.c  memfault_integration.c  memfault_ncs_metrics.c
modules/memfault/config/: memfault_metrics_heartbeat_extra.def
samples/bluetooth/peripheral_uart/: Kconfig  prj.conf  sample.yaml
samples/nrf9160/buzzer/: CMakeLists.txt  prj.conf
samples/nrf9160/cloud_client/: CMakeLists.txt  prj.conf  spm.conf
samples/nrf9160/memfault/: README.rst  prj.conf
samples/nrf9160/mqtt_google_cloud/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/nrf9160/mqtt_google_cloud/src/: main.c  ntp.c  ntp.h
samples/nrf9160/mqtt_google_cloud/src/private_info/: .gitignore
samples/nrf9160/mqtt_simple/: prj.conf
samples/nrf9160/spm/: actinius_icarus.overlay
samples/usb/usb_uart_bridge/: prj.conf
subsys/net/lib/: CMakeLists.txt  Kconfig
subsys/spm/: Kconfig  spm.c
(+75 files in other folders)
